--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,14 +1,9 @@
 <template name="layout">
   <div class="container">
-  <header class="navbar">
-    <div class="navbar-inner">
-        <a class="brand" href="{{pathFor 'postsList'}}">Microscope</a>
-    </div>
-  </header>
-  <h1>Fucking title again</h1>
-  <br>
-  <div id="main" class="row-fluid">
-    {{> yield}}
-  </div>
+      {{> header}}
+      <h1>Can't kill the fucking Headline </h1> 
+          <div id="main" class="row-fluid">
+                {{> yield}}
+          </div>
   </div>
 </template>
